# eXRC

./: CMakeLists.txt  LibConfig.hxx.in  README.md
Include/eXRC/: Reddit.hxx
PrivateInclude/: AuthorizationData.hxx
Resource/: Library.qrc
Source/: AuthorizationData.cxx  RedditService.cxx
